--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Go test (race)
         run: go test -race ./...
 
-  docker:
+  push:
     runs-on: ubuntu-latest
     needs: test
     steps:
