--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,59 +3,59 @@ name: ci
 on:
   push:
     branches: ["main"]
+    tags: ["v*.*.*"]
   pull_request:
   workflow_dispatch:
 
 permissions:
   contents: read
   packages: write
+  security-events: write   # needed for Trivy SARIF upload
 
 env:
   IMAGE_NAME: player-data-service
   REGISTRY: ghcr.io
-  IMAGE_REPO: ghcr.io/${{ github.repository_owner }}/player-data-service
 
 jobs:
+  #  1. Test
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Go
-        uses: actions/setup-go@v5
+      - uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
           cache: true
 
       - name: gofmt check
         run: |
-          set -euo pipefail
           UNFORMATTED="$(gofmt -l .)"
           if [ -n "$UNFORMATTED" ]; then
-            echo "The following files are not gofmt formatted:"
-            echo "$UNFORMATTED"
-            exit 1
+            echo "Not gofmt-formatted:" && echo "$UNFORMATTED" && exit 1
           fi
 
-      - name: Go test
+      - name: go test
         run: go test ./...
 
-      - name: Go test (race)
+      - name: go test (race detector)
         run: go test -race ./...
 
+  #  2. Build & push multi-arch image
   push:
     runs-on: ubuntu-latest
     needs: test
+    outputs:
+      image: ${{ steps.img.outputs.image_repo }}
+      digest: ${{ steps.build.outputs.digest }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set lowercase image repo
+      - name: Normalise image repo (lowercase owner)
         id: img
         run: |
           OWNER_LOWER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
-          echo "image_repo=ghcr.io/${OWNER_LOWER}/${{ env.IMAGE_NAME }}" >> $GITHUB_OUTPUT
+          echo "image_repo=ghcr.io/${OWNER_LOWER}/${{ env.IMAGE_NAME }}" >> "$GITHUB_OUTPUT"
 
       - name: Docker meta
         id: meta
@@ -63,14 +63,13 @@ jobs:
         with:
           images: ${{ steps.img.outputs.image_repo }}
           tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
             type=raw,value=latest,enable={{is_default_branch}}
             type=sha,format=short,prefix=sha-
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
 
       - name: Login to GHCR
         uses: docker/login-action@v3
@@ -80,6 +79,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push (multi-arch)
+        id: build
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -87,3 +87,31 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=registry,ref=${{ steps.img.outputs.image_repo }}:buildcache
+          cache-to:   type=registry,ref=${{ steps.img.outputs.image_repo }}:buildcache,mode=max
+
+  # Vulnerability scan (Trivy)
+  trivy:
+    runs-on: ubuntu-latest
+    needs: push
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@0.30.0
+        with:
+          # scan the image we just pushed (by digest for reproducibility)
+          image-ref: ${{ needs.push.outputs.image }}@${{ needs.push.outputs.digest }}
+          format: sarif
+          output: trivy-results.sarif
+          # fail the job on CRITICAL or HIGH findings
+          severity: CRITICAL,HIGH
+          exit-code: "1"
+          ignore-unfixed: true
+
+      - name: Upload Trivy results to GitHub Security tab
+        # upload even if the scan step failed so the results are visible
+        if: always()
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: trivy-results.sarif
