--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: read
+  contents: write
   packages: write
   security-events: write   # needed for Trivy SARIF upload
 
@@ -65,7 +65,6 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-            type=raw,value=latest,enable={{is_default_branch}}
             type=sha,format=short,prefix=sha-
 
       - uses: docker/setup-qemu-action@v3
@@ -115,3 +114,32 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: trivy-results.sarif
+
+  # 4. Pin deploy manifest to immutable image digest for ArgoCD/Kustomize
+  gitops-pin-digest:
+    runs-on: ubuntu-latest
+    needs: [push, trivy]
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && github.actor != 'github-actions[bot]'
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Update Kustomize image digest
+        env:
+          DIGEST: ${{ needs.push.outputs.digest }}
+          FILE: deploy/kustomize/overlays/minikube/kustomization.yaml
+        run: |
+          grep -qE '^[[:space:]]*digest:' "$FILE"
+          sed -i -E "s|(^[[:space:]]*digest:[[:space:]]*).*$|\1${DIGEST}|" "$FILE"
+
+          if git diff --quiet -- "$FILE"; then
+            echo "Manifest already pinned to ${DIGEST}"
+            exit 0
+          fi
+
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add "$FILE"
+          git commit -m "chore(gitops): pin player-data-service digest [skip ci]"
+          git push
