--- a/deploy/kustomize/base/kustomization.yaml
+++ b/deploy/kustomize/base/kustomization.yaml
@@ -3,5 +3,10 @@ kind: Kustomization
 
 resources:
   - namespace.yaml
+  - serviceaccount.yaml
   - deployment.yaml
   - service.yaml
+  - pdb.yaml
+  - networkpolicy.yaml
+  - observability-alerts-configmap.yaml
+  - grafana-dashboard-configmap.yaml
