--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
 
   #  2. Build & push multi-arch image
   push:
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     needs: test
     outputs:
