--- a/deploy/kustomize/base/kustomization.yaml
+++ b/deploy/kustomize/base/kustomization.yaml
@@ -10,3 +10,4 @@ resources:
   - networkpolicy.yaml
   - observability-alerts-configmap.yaml
   - grafana-dashboard-configmap.yaml
+  - servicemonitor.yaml
