--- a/deploy/argocd/argocd-cm.yaml
+++ b/deploy/argocd/argocd-cm.yaml
@@ -5,6 +5,6 @@ metadata:
   namespace: argocd
 data:
   # Default is ~3 minutes. Lower value = faster detection of new commits.
-  timeout.reconciliation: 15s
+  timeout.reconciliation: "15s"
   # Remove random delay to keep sync latency predictable.
-  timeout.reconciliation.jitter: 0s
+  timeout.reconciliation.jitter: "0s"
