--- a/deploy/argocd/argocd-cm.yaml
+++ b/deploy/argocd/argocd-cm.yaml
@@ -4,7 +4,7 @@ metadata:
   name: argocd-cm
   namespace: argocd
 data:
-  # Default is ~3 minutes. Lower value = faster detection of new commits.
-  timeout.reconciliation: "15s"
+  # Very fast polling for local/demo environments.
+  timeout.reconciliation: "5s"
   # Remove random delay to keep sync latency predictable.
   timeout.reconciliation.jitter: "0s"
