--- a/deploy/kustomize/base/grafana-dashboard-configmap.yaml
+++ b/deploy/kustomize/base/grafana-dashboard-configmap.yaml
@@ -14,13 +14,16 @@ data:
       "title": "Player Data Service - SLO",
       "uid": "player-data-slo",
       "schemaVersion": 39,
-      "version": 1,
-      "refresh": "30s",
+      "version": 2,
+      "refresh": "1s",
       "timezone": "browser",
       "tags": ["opus-major", "sre", "slo"],
       "time": {
         "from": "now-6h",
         "to": "now"
+      },
+      "timepicker": {
+        "refresh_intervals": ["1s", "2s", "5s", "10s", "30s", "1m"]
       },
       "templating": {
         "list": []
@@ -35,7 +38,7 @@ data:
           "targets": [
             {
               "refId": "A",
-              "expr": "sum(rate(http_requests_total{path=\"/player-data\"}[5m]))"
+              "expr": "sum(rate(http_requests_total{path=\"/player-data\"}[$__rate_interval])) or vector(0)"
             }
           ],
           "fieldConfig": {
@@ -55,7 +58,7 @@ data:
           "targets": [
             {
               "refId": "A",
-              "expr": "histogram_quantile(0.95, sum by (le) (rate(http_request_duration_seconds_bucket{path=\"/player-data\"}[5m])))"
+              "expr": "histogram_quantile(0.95, sum by (le) (rate(http_request_duration_seconds_bucket{path=\"/player-data\"}[$__rate_interval]))) or vector(0)"
             }
           ],
           "fieldConfig": {
@@ -83,7 +86,7 @@ data:
           "targets": [
             {
               "refId": "A",
-              "expr": "1 - (sum(rate(http_requests_total{path=\"/player-data\",status=~\"5..\"}[5m])) / clamp_min(sum(rate(http_requests_total{path=\"/player-data\"}[5m])), 0.001))"
+              "expr": "1 - ((sum(rate(http_requests_total{path=\"/player-data\",status=~\"5..\"}[$__rate_interval])) or vector(0)) / clamp_min((sum(rate(http_requests_total{path=\"/player-data\"}[$__rate_interval])) or vector(0)), 0.001))"
             }
           ],
           "fieldConfig": {
