--- a/infra/clusters/minikube-dev/apps/kustomization.yaml
+++ b/infra/clusters/minikube-dev/apps/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - monitoring-stack.yaml
-  - player-data-service.yaml
+  - platform
+  - workloads
