--- a/infra/clusters/minikube-dev/bootstrap/argocd/kustomization.yaml
+++ b/infra/clusters/minikube-dev/bootstrap/argocd/kustomization.yaml
@@ -2,7 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  #todo: mettre dernier version au lieu de stable
   - https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+  - ingress.yaml
 
 patches:
   - path: patches/argocd-cmd-params-cm.yaml
