--- a/infra/clusters/minikube-dev/bootstrap/argocd/kustomization.yaml
+++ b/infra/clusters/minikube-dev/bootstrap/argocd/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: argocd
 
 resources:
-  #todo: mettre dernier version au lieu de stable
   - https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
   - ingress.yaml
 
